fix:대시보드 모달밖에눌렀을 떄 꺼지는 css z-index 조절

--- a/src/style/dash-board.css
+++ b/src/style/dash-board.css
@@ -13,7 +13,7 @@
   align-items: center;
   justify-content: center;
   position: fixed;
-  z-index: 9999;
+  z-index: 5;
   top: 0;
   left: 0;
   width: 100%;
